cursor: fix code style